Skip to content

Qt 4 intf doesn't build on mac

There is some build system problem related to the mac version of searchlineedit.

Lately, searchlineedit_mac.mm was removed from the build system because it caused some other problems.

We should properly readd it or remove / comment out the mac-specific code completely.

Also see https://trac.macports.org/ticket/35510

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information