qt: Fix searchlineedit linking on macOS

The macOS specific file is not used anymore, so it's necessary to enable
this code again on macOS too, else linking will fail as there is no
implementation.

Fix #7279