modules/gui/qt/util/searchlineedit.hpp
@@ -44,7 +44,6 @@ public:
     }
 };
 
-#ifndef Q_OS_MAC
 class QFramelessButton;
 class SearchLineEdit : public QLineEdit
 {
@@ -71,29 +70,6 @@ private slots:
 signals:
     void searchDelayedChanged( const QString& );
 };
-#else
-
-/* On Mac, we try to use the native NSSearchField */
-#include <QMacCocoaViewContainer>
-
-class SearchLineEdit : public QMacCocoaViewContainer
-{
-    Q_OBJECT
-
-public:
-    SearchLineEdit(QWidget *parent = 0);
-    virtual ~SearchLineEdit() {}
-
-    QSize sizeHint() const Q_DECL_OVERRIDE { return QSize(150, 40); }
-
-public slots:
-    void clear() {}
-
-signals:
-    void searchDelayedChanged( const QString& );
-    void textEdited( const QString& );
-};
-#endif
 
 #endif
 
